# infusethink-iac

./: .gitignore  .pre-commit-config.yaml  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
config/: __init__.py  dev.py  prod.py
modules/backend/: infuseth_backend.py
modules/database/: __init__.py  infuseth_database.py
modules/dns/: __init__.py  azure_dns_zone.py
modules/frontend/: __init__.py  infuseth_frontend.py
modules/shared/: __init__.py  infusethink_resource_group.py
shared-infra/: Pulumi.shared.yaml  Pulumi.yaml  __main__.py
